--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ Version: 1.0
 
 /* Parent stylesheet should be loaded from functions.php not using @import */
 
+:root {
+  --primary_color: #312c21;
+  --primary_color_hover: #30170a;
+}
+
 .custom__header {
   background-color: white;
 }
@@ -34,6 +39,39 @@ Version: 1.0
   display: none;
 }
 
+.header__search_form_btn,
+.header__main_menu_btn,
+.header__main_menu_btn_close {
+  cursor: pointer;
+}
+
+.header__main_menu {
+  margin: 0 !important;
+  padding: 64px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  display: none;
+}
+
+.header__main_menu a {
+  text-decoration: none;
+  font-size: 2.5rem;
+  font-weight: 300;
+}
+
+.header__main_menu a:hover {
+  color: var(--primary_color_hover);
+}
+
+.header__main_menu li {
+  list-style: none;
+}
+
+.header__main_menu_btn_close {
+  display: none;
+}
+
 @keyframes show_search_form_animation {
   from {
     opacity: 0;
@@ -46,7 +84,32 @@ Version: 1.0
   }
 }
 
+@keyframes show_main_menu_animation {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.show__header_main_menu {
+  display: flex;
+  animation: 1s show_main_menu_animation forwards;
+}
+
 .show__search_form {
   display: block;
-  animation: 1s show_search_form_animation forwards;
+  animation: 3s show_search_form_animation forwards;
+}
+
+@media (max-width: 60rem) {
+  .header__logo_wrapper {
+    width: 150px !important;
+  }
+
+  .header__main_menu {
+    flex-direction: column;
+  }
 }
