--- a/style.css
+++ b/style.css
@@ -56,6 +56,63 @@ Version: 1.0
 .home__carousel .swiper-button-prev,
 .home__carousel .swiper-button-next {
   color: white !important;
+  top: 30%;
+}
+
+/*CATEGORIES SECTION HOME*/
+#section_products {
+  margin-top: -100px;
+  position: relative;
+  z-index: 3;
+}
+
+.category__card {
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 !important;
+}
+
+#section_products .category__card:nth-child(3),
+#section_products .category__card:nth-child(4) {
+  flex-direction: row-reverse;
+}
+
+.category__card_img {
+  background-size: cover !important;
+  width: 100%;
+  height: auto;
+  transition: 0.5s;
+}
+
+.category__card_img:hover {
+  box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.2);
+}
+
+.category__card_info {
+  padding: 60px;
+  background-color: var(--secondary_color);
+  transition: 0.5s;
+}
+
+.category__card_info:hover {
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+}
+
+.category__card_btn {
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+  margin-top: 20px;
+}
+
+.category__card_title {
+  font-size: 2.5rem;
+  font-weight: 300;
+  color: var(--primary_color);
+  line-height: 3rem;
+  text-wrap: balance;
 }
 
 @media (max-width: 40rem) {
@@ -70,5 +127,27 @@ Version: 1.0
   .home__carousel .swiper-button-prev,
   .home__carousel .swiper-button-next {
     display: none;
+  }
+
+  #section_products .category__card:nth-child(3),
+  #section_products .category__card:nth-child(4) {
+    flex-direction: row;
+  }
+
+  .category__card_info {
+    padding: 20px;
+    max-width: 50%;
+  }
+
+  .category__card_title {
+    font-size: 2rem;
+  }
+
+  .category__card_btn {
+    font-size: 1rem;
+  }
+
+  .category__card_img {
+    max-width: 50%;
   }
 }
