--- a/components/custom-header/styles.css
+++ b/components/custom-header/styles.css
@@ -6,6 +6,10 @@
 
 .custom__header {
   background-color: white;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 99999;
 }
 
 .custom__header i {
