[FEAT] Product section with video

--- a/components/custom-header/styles.css
+++ b/components/custom-header/styles.css
@@ -2,6 +2,7 @@
   --primary_color: #312c21;
   --primary_color_hover: #30170a;
   --secondary_color: #f2f0ed;
+  --third_color: #827b76;
 }
 
 .custom__header {
