--- a/style.css
+++ b/style.css
@@ -246,6 +246,25 @@ Version: 1.0
   text-decoration: none;
 }
 
+.product__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.section__products_video_info {
+  background-color: var(--third_color);
+  padding: 60px 120px 150px !important;
+}
+
+.divisor {
+  width: 38%;
+  padding: 0.5px;
+  margin: 60px 0;
+  position: absolute;
+  left: 0;
+}
+
 @media (max-width: 40rem) {
   .carousel__title {
     font-size: 3rem;
