--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ Version: 1.0
 .home__carousel .swiper-button-prev,
 .home__carousel .swiper-button-next {
   color: white !important;
-  top: 25%;
+  top: 10% !important;
 }
 
 /*CATEGORIES SECTION HOME*/
@@ -198,7 +198,8 @@ Version: 1.0
 
 /*PRODUCTS HOME SECTION*/
 #section_products,
-#section_news {
+#section_news,
+#section_location {
   padding: 100px 0;
 }
 
@@ -272,6 +273,7 @@ Version: 1.0
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin-top: 20px;
 }
 
 .post__card img {
@@ -350,6 +352,42 @@ textarea {
   display: none;
 }
 
+.location__title {
+  display: block;
+  font-size: 3rem;
+  color: var(--primary_color);
+}
+
+.location__info_wrapper {
+  border-left: 4px solid #e6e4e1;
+  padding-left: 20px !important;
+  height: 100%;
+}
+
+.location__info {
+  display: flex;
+  flex-direction: column;
+}
+
+.location__phone {
+  font-size: 1.6rem;
+  font-weight: bold;
+  color: var(--primary_color);
+  text-decoration: none;
+}
+
+.location__subtitle {
+  font-size: 2rem;
+  font-weight: bold;
+  color: var(--primary_color);
+}
+
+.location__text {
+  font-size: 1.6rem;
+  color: var(--primary_color);
+  text-decoration: none;
+}
+
 @media (max-width: 40rem) {
   .carousel__title {
     font-size: 3rem;
@@ -396,5 +434,13 @@ textarea {
 
   .about__img {
     margin: auto;
+  }
+
+  .section__products_video_info {
+    padding: 20px !important;
+  }
+
+  .location__info_wrapper {
+    border: none;
   }
 }
