--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ Version: 1.0
 .section_categories {
   margin-top: -100px;
   position: relative;
-  z-index: 3;
+  z-index: 2;
 }
 
 .category__card {
@@ -73,6 +73,7 @@ Version: 1.0
   flex-direction: row;
   justify-content: space-between;
   padding: 0 !important;
+  height: 300px;
 }
 
 .section_categories .category__card:nth-child(3),
@@ -443,6 +444,10 @@ textarea {
   .home__carousel .swiper-button-prev,
   .home__carousel .swiper-button-next {
     display: none;
+  }
+
+  .category__card {
+    height: auto;
   }
 
   .section_categories .category__card:nth-child(3),
