--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ Version: 1.0
 .home__carousel {
   width: 100%;
   height: 100vh;
+  position: relative;
 }
 
 .carousel__wrapper {
@@ -57,7 +58,6 @@ Version: 1.0
 .home__carousel .swiper-button-prev,
 .home__carousel .swiper-button-next {
   color: white !important;
-  top: 10% !important;
 }
 
 /*CATEGORIES SECTION HOME*/
