--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ Version: 1.0
   width: 100%;
   height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 
 .carousel__wrapper {
@@ -702,7 +703,7 @@ textarea {
   object-fit: cover;
 }
 
-@media (max-width: 40rem) {
+@media (max-width: 1024px) {
   .carousel__title {
     font-size: 3rem;
   }
