--- a/style.css
+++ b/style.css
@@ -533,32 +533,19 @@ textarea {
   color: var(--primary_color);
 }
 
-.section__creator {
-  height: 100vh;
-  overflow: hidden;
-}
-
-.section__creator .row {
-  height: 100%;
-}
-
-.section__creator .col-md-6 {
-  height: 100%;
-}
-
 .section__creator img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
+.section__creator_column {
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: center center;
+}
+
 .section__content_wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100% !important;
-  z-index: 2;
   padding: 150px;
   font-size: 2rem;
   font-weight: 300;
