--- a/style.css
+++ b/style.css
@@ -542,7 +542,25 @@ textarea {
 .section__creator_column {
   background-size: cover !important;
   background-repeat: no-repeat !important;
-  background-position: center center;
+  background-position: top center !important;
+  position: relative;
+}
+
+.section__creator_video {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+}
+
+.section__creator_video video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.6;
 }
 
 .section__content_wrapper {
@@ -554,6 +572,8 @@ textarea {
   justify-content: center;
   gap: 20px;
   color: white;
+  position: relative;
+  z-index: 3;
 }
 
 .section__content_wrapper a {
