--- a/style.css
+++ b/style.css
@@ -690,11 +690,10 @@ textarea {
   font-size: 1.6rem !important;
   color: var(--primary_color) !important;
   line-height: 3rem !important;
-  letter-spacing: 2px;
 }
 
 .product__resource_btn {
-  padding: 12px;
+  padding: 6px 12px;
   border: 1px solid var(--primary_color);
   text-decoration: none;
   display: flex;
@@ -739,6 +738,10 @@ textarea {
   width: 100%;
   height: 500px;
   object-fit: cover;
+}
+
+.product__resources_col {
+  padding: 40px !important;
 }
 
 @media (max-width: 1024px) {
@@ -844,5 +847,9 @@ textarea {
   .stores__card img {
     width: 100%;
     height: auto;
+  }
+
+  .product__resources_col {
+    padding: initial !important;
   }
 }
