--- a/style.css
+++ b/style.css
@@ -65,6 +65,48 @@ a {
   color: white !important;
 }
 
+.video__background_section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
+
+.video__background_content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 100%;
+}
+
+.video__background_title {
+  font-size: 10rem;
+  color: white;
+  font-weight: 400;
+  text-align: center;
+}
+
+.video__background_subtitle {
+  font-size: 2rem;
+  color: white;
+  font-weight: light;
+  text-align: center;
+}
+
+.video__background_btn {
+  font-size: 4rem;
+  color: var(--primary_color);
+  background-color: white;
+  padding: 16px 60px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-top: 40px;
+}
+
 /*CATEGORIES SECTION HOME*/
 .section_categories {
   margin-top: -100px;
