--- a/components/custom-header/styles.css
+++ b/components/custom-header/styles.css
@@ -12,6 +12,7 @@ html {
 body {
   font-family: Lato !important;
   background-color: var(--secondary_color) !important;
+  padding-top: 40px;
 }
 
 .page-header {
