--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ input[type="email"] {
   font-weight: 400;
   line-height: 1em;
   color: var(--primary_color);
-  border: 0 !important;
+  border: none !important;
   border-bottom: 1px solid #8a817a !important;
   background: #fff !important;
 }
