--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ a {
 
 .product__img {
   background-color: white;
-  height: 440px;
+  height: 350px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -270,8 +270,8 @@ a {
 }
 
 .product__img img {
-  height: 230px;
-  object-fit: cover;
+  height: auto;
+  object-fit: contain;
 }
 
 .product__card_img_btn {
@@ -291,8 +291,15 @@ a {
 
 .product__title {
   color: var(--primary_color);
-  font-size: 2rem;
-  font-weight: 500;
+  font-size: 1.6rem;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.product__price {
+  color: var(--primary_color);
+  font-size: 1.4rem;
+  font-weight: 300;
   text-decoration: none;
 }
 
@@ -328,6 +335,7 @@ a {
   flex-direction: column;
   gap: 20px;
   margin-top: 20px;
+  text-decoration: none;
 }
 
 .post__card img {
@@ -346,6 +354,7 @@ a {
   overflow: hidden;
   text-overflow: ellipsis;
   text-decoration: none;
+  height: 60px;
 }
 
 .post__card_text {
