--- a/components/custom-header/styles.css
+++ b/components/custom-header/styles.css
@@ -12,6 +12,9 @@ html {
 body {
   font-family: Lato !important;
   background-color: var(--secondary_color) !important;
+}
+
+body:not(.logged-in) {
   padding-top: 80px;
 }
 
@@ -25,6 +28,11 @@ body {
   top: 0;
   z-index: 5;
   width: 100%;
+  padding: 40px 0 20px 0 !important;
+}
+
+body:not(.logged-in) .custom__header {
+  padding: 16px 0 !important;
 }
 
 .custom__header i {
